Fix scrollbar of entry details sidebar

--- a/src/app/main/components/entries-table/entries-table.component.scss
+++ b/src/app/main/components/entries-table/entries-table.component.scss
@@ -1,4 +1,5 @@
 @import 'variables';
+@import 'mixins';
 
 $sidePanelInDuration: 300ms;
 $sidePanelOutDuration: 250ms;
@@ -134,20 +135,7 @@ $sidePanelOutDuration: 250ms;
                 min-height: 35px;
                 position: sticky;
                 bottom: 0;
-            }
-        
-            ::-webkit-scrollbar {
-                -webkit-appearance: none;
-            }
-            
-            ::-webkit-scrollbar{
-                height: 8px;
-                width: 8px;
-            }
-            
-            ::-webkit-scrollbar-thumb {
-                background-color: #999;
-            }
+            }   
         }
 
         .ui-tree {
@@ -155,7 +143,7 @@ $sidePanelOutDuration: 250ms;
             height: 100%;
             flex: 1;
             border: none;
-            padding: 0 0 0.571em 1em;
+            padding: 0 0 0 1em;
 
             .ui-tree-wrapper {
                 height: 100%;
@@ -164,6 +152,8 @@ $sidePanelOutDuration: 250ms;
             .ui-tree-container {
                 padding-top: 0.4rem;
                 position: relative;
+
+                @include scrollbar;
 
                 .ui-treenode-content, .ui-treenode-content:focus {
                     outline: none !important;
@@ -198,23 +188,7 @@ $sidePanelOutDuration: 250ms;
         width: 100%;
     }
 
-    &::-webkit-scrollbar {
-        -webkit-appearance: none;
-    }
-
-    &::-webkit-scrollbar {
-        height: 8px;
-        width: 8px;
-    }
-
-    &::-webkit-scrollbar-thumb {
-        background-color: #999;
-    }
-
-    &::-webkit-scrollbar-track {
-        background-color: #dedede;
-    }
-
+    @include scrollbar;
 }
 
 .list-cta {
