--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -22,3 +22,22 @@
     }
   }
 }
+
+@mixin scrollbar {
+  &::-webkit-scrollbar {
+    -webkit-appearance: none;
+  }
+  
+  &::-webkit-scrollbar{
+    height: 8px;
+    width: 8px;
+  }
+  
+  &::-webkit-scrollbar-thumb {
+    background-color: #999;
+  }
+
+  &::-webkit-scrollbar-track {
+    background-color: #dedede;
+  }
+}
